--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 			<div class="namebar">楊凱安</div>
 			<table class="block_space">
 				<tr>
-					<td class="row"><a href="https://docs.google.com/document/d/1TlE4X9ag_4s4aHQRkv7qNsXPwmNxGxx0ZEfxLPcjcek/edit?usp=sharing">KN9/20</a></td>
+					<td class="row"><a href="https://docs.google.com/document/d/1TlE4X9ag_4s4aHQRkv7qNsXPwmNxGxx0ZEfxLPcjcek/edit?usp=sharing">KN_9/20</a></td>
 				</tr>
 				<tr>
 					<td class="row"></td>		
@@ -185,7 +185,7 @@
 			<div class="namebar">高宗霖</div>
 			<table class="block_space">
 				<tr>
-					<td class="row"><a href="https://docs.google.com/document/d/11E4zYve5DmYacaumN8rM-bi-2Q2hbVEFptkwGvTB5pc/edit?usp=sharing">第一篇</a></td>
+					<td class="row"><a href="https://docs.google.com/document/d/16zMal3MtgXozlD3Q9oiSuA2W_Bsdy_DqNhp5otLRqxs/edit?usp=sharing">ZL_9/22</a></td>
 				</tr>
 				<tr>
 					<td class="row"></td>		
