--- a/index.html
+++ b/index.html
@@ -149,10 +149,7 @@
 	<div class="title-block">
 		<table style="height: 100%; width: 100%;">
 			<tr style="height: 100%; width: 100%;">
-				<td class="home_page"><a href="index.html" class="unset2">宗霖の情慾散文篇</a></td>
-				<td class="title_letter_finish"><a href="whoami.html" class="unset"><span>誰是宗霖</span></a></td>
-				<td class="title_letter_finish"><a href="appreciate.html" class="unset"><span>怎麼欣賞</span></a></td>
-				<td class="title_letter_last"><a href="recommand.html" class="unset"><span>推薦書單</span></a></td>
+				<td class="home_page"><a href="index.html" class="unset2">人生對談</a></td>
 				<td class="title_letter"></td>
 				<td class="title_letter"></td>
 				<td class="title_letter"></td>
